infra/k8s/testserv-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: testserv-srv
spec:
  type: NodePort
  selector: 
    app: testserv
  ports:
    - name: testserv
      protocol: TCP
      port: 8099
      targetPort: 8099
