infra/k8s/uiserv-depl-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uiserv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp
  template:
    metadata:
      labels:
        app: reactapp
    spec: 
      containers:
        - name: reactapp
          image: services4amit/reactapp:0.0.1

---
apiVersion: v1 
kind: Service
metadata:
  name: reactapp-clusterip
spec:
  selector:
    app: reactapp
  ports:
    - name: reactapp
      protocol: TCP 
      port: 3000
      targetPort: 3000
