infra/k8s/uiserv-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: testserv-srv
spec:
  type: NodePort
  selector: 
    app: testserv
  ports:
    - name: testserv
      protocol: TCP
      port: 3000
      targetPort: 3000
