infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernates.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: myserv.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: testserv-clusterip
              servicePort: 8099

          - path: /
            backend:
              serviceName: reactapp-clusterip
              servicePort: 3000
